# mnemos

./: .env.example  .gitignore  <typer.models.OptionInfo object at 0x106c7e1c0>  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  mock_telegram.json  non_existent.json  package-lock.json  package.json  pyproject.toml  özet.txt
apps/bot/: telegram_bot.py
apps/cli/: chat.py  main.py
apps/dashboard/: app.js  index.html  styles.css
apps/web/: ROADMAP.md  amac.md  data.md  next.config.ts  package-lock 2.json  package.json
docs/: ARCHITECTURE.md  BRAIN_INSPIRED_DESIGN.md  COGNITIVE_MODEL.md  CONFIG_REFERENCE.md  CONSCIOUSNESS_THEORIES.md  DATA_PIPELINE.md  DECISIONS.md  EVALUATION.md  MACHINE_LEARNING_STRATEGY.md  MEMORY_SYSTEM.md  PRIVACY_AND_SAFETY.md  PRODUCT_INTENT.md  ROADMAP.md  RUNBOOK.md  SESSION_LOG.md  TASK_BOARD.md  TRAINING_STRATEGY.md  index.md
scratch/: debug_agent.py  inspect_agent_path.py  test_agent_manual.py
tests/: test_affect_audio.py  test_api_endpoints.py  test_cognition_hardened.py  test_cognitive_bridge.py  test_cognitive_integrity.py  test_cognitive_ledger.py  test_faiss_search.py  test_ghost_privacy.py  test_hitl_feedback.py  test_hive_continuity.py  test_ingestion.py  test_meta_brain.py  test_mnemonic_forking.py  test_neural_evolution.py  test_neural_lattice.py  test_neural_synesthesia.py  test_plugins.py  test_privacy_ext.py  test_profiling.py  test_recursive_wisdom.py  test_redactor.py  test_reflection.py  test_session_7.py  test_session_9.py  test_soul_sovereignty.py  test_velocity.py  test_weights.py  test_worker.py
(+211 files in other folders)
